refresh bug squashed

--- a/app/static/css/form.css
+++ b/app/static/css/form.css
@@ -1,9 +1,6 @@
 #form {
     width: 860px;
     padding: 10px 10px 10px 45px;
-    background-image: url(/static/images/circle.png);
-    background-repeat: no-repeat;
-    background-position: right;
     margin-bottom: 60px;
 }
 #form p {
